# Digital-Me

./: .gitignore  README.md  portfolio.txt  work_experience.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  pyproject.toml  test_chat_api.py  test_results.json
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  chat_agent.py
backend/app/models/: __init__.py  schemas.py
backend/app/prompts/: __init__.py  system_prompt.py
backend/app/retrieval/: __init__.py  knowledge_loader.py  vector_store.py
backend/app/tools/: __init__.py  search_tools.py
backend/data/: knowledge_base.json
configs/: agent_config.yaml
docs/: architecture-patterns.md
examples/: tool_definitions.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: chat-header.tsx  chat-input.tsx  chat-message.tsx  suggested-questions.tsx
frontend/src/components/landing/: hero.tsx
frontend/src/components/ui/: button.tsx  particles.tsx
frontend/src/hooks/: use-chat.ts
